# GameEngine

./: CMakeLists.txt  Collider.cpp  Collider.h  Component.cpp  Component.h  Coords.cpp  Coords.h  DataStorage.cpp  DataStorage.h  DrawManager.cpp  DrawManager.h  Engine.cpp  Engine.h  EventManager.cpp  EventManager.h  GameObject.cpp  GameObject.h  LogicsManager.cpp  LogicsManager.h  PhysicsManager.cpp  PhysicsManager.h  README.md  Renderer.cpp  Renderer.h  RigidBody.cpp  RigidBody.h  Script.h  main.cpp
